--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@ body {
   justify-content: center;
   align-items: center;
   background-image: url("https://images.pexels.com/photos/13444726/pexels-photo-13444726.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-  background-size: cover; /* Asegura que la imagen cubra toda la pantalla */
-  background-position: center; /* Centra la imagen */
-  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .help {
@@ -47,7 +47,7 @@ body {
 
 /* Contenido principal */
 .contenido-principal {
-  width: 750px;
+  max-width: 750px;
   padding: 20px;
   background: rgba(200, 121, 91, 0.5); /* Fondo semi-transparente */
   backdrop-filter: blur(10px); /* Aplica el desenfoque al fondo */
